--- a/valimar_front/package.json
+++ b/valimar_front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "ValimarFrontal": "file:",
